@@ -4,11 +4,11 @@
  */
 package io.github.pastorgl.datacooker.scripting;
 
-import io.github.pastorgl.datacooker.RegisteredPackages;
-import io.github.pastorgl.datacooker.metadata.OperationMeta;
 import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ClassInfoList;
 import io.github.classgraph.ScanResult;
+import io.github.pastorgl.datacooker.RegisteredPackages;
+import io.github.pastorgl.datacooker.metadata.OperationMeta;
 
 import java.lang.reflect.Modifier;
 import java.util.Collections;
@@ -18,11 +18,9 @@ import java.util.Map;
 
 public class Operations {
     public final static Map<String, OperationInfo> OPERATIONS;
-    public final static Map<String, String> PACKAGES;
 
     static {
         Map<String, OperationInfo> operations = new HashMap<>();
-        Map<String, String> packages = new HashMap<>();
 
         for (Map.Entry<String, String> pkg : RegisteredPackages.REGISTERED_PACKAGES.entrySet()) {
             try (ScanResult scanResult = new ClassGraph().acceptPackages(pkg.getKey()).scan()) {
@@ -32,20 +30,16 @@ public class Operations {
                 for (Class<?> opClass : operationClassRefs) {
                     try {
                         if (!Modifier.isAbstract(opClass.getModifiers())) {
-                            Operation op = (Operation) opClass.newInstance();
+                            Operation op = (Operation) opClass.getDeclaredConstructor().newInstance();
                             OperationMeta meta = op.meta();
                             String verb = meta.verb;
-                            operations.put(verb, new OperationInfo((Class<? extends Operation>) opClass, meta));
+                            operations.put(verb, new OperationInfo((Class<Operation>) opClass, meta));
                         }
                     } catch (Exception e) {
                         System.err.println("Cannot instantiate Operation class '" + opClass.getTypeName() + "'");
                         e.printStackTrace(System.err);
                         System.exit(-8);
                     }
-                }
-
-                if (!operationClassRefs.isEmpty()) {
-                    packages.put(pkg.getKey(), pkg.getValue());
                 }
             }
         }
@@ -56,14 +50,13 @@ public class Operations {
         }
 
         OPERATIONS = Collections.unmodifiableMap(operations);
-        PACKAGES = Collections.unmodifiableMap(packages);
     }
 
     public static Map<String, OperationInfo> packageOperations(String pkgName) {
         Map<String, OperationInfo> ret = new HashMap<>();
 
         for (Map.Entry<String, OperationInfo> e : OPERATIONS.entrySet()) {
-            if (e.getValue().opClass.getPackage().getName().equals(pkgName)) {
+            if (e.getValue().configurable.getPackage().getName().equals(pkgName)) {
                 ret.put(e.getKey(), e.getValue());
             }
         }
