@@ -4,8 +4,9 @@
  */
 package io.github.pastorgl.datacooker.scripting;
 
-import io.github.pastorgl.datacooker.config.Constants;
+import io.github.pastorgl.datacooker.Constants;
 import io.github.pastorgl.datacooker.config.InvalidConfigurationException;
+import io.github.pastorgl.datacooker.config.Configuration;
 import io.github.pastorgl.datacooker.data.*;
 import io.github.pastorgl.datacooker.metadata.*;
 import org.antlr.v4.runtime.CharStream;
@@ -26,7 +27,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static io.github.pastorgl.datacooker.config.Constants.*;
+import static io.github.pastorgl.datacooker.Constants.*;
 
 public class TDL4Interpreter implements Iterable<TDL4.StatementContext> {
     private DataContext dataContext;
@@ -275,11 +276,11 @@ public class TDL4Interpreter implements Iterable<TDL4.StatementContext> {
 
         StreamConverter converter;
         try {
-            converter = tfInfo.transformClass.newInstance().converter();
+            converter = tfInfo.configurable.getDeclaredConstructor().newInstance().converter();
         } catch (Exception e) {
             throw new InvalidConfigurationException("Unable to initialize TRANSFORM " + tfVerb + "()");
         }
-        dataContext.alterDataStream(dsName, converter, requested, columns, keyExpression, new ParamsContext(tfInfo.meta.definitions, "Transform '" + tfVerb + "'", params));
+        dataContext.alterDataStream(dsName, converter, requested, columns, keyExpression, new Configuration(tfInfo.meta.definitions, "Transform '" + tfVerb + "'", params));
     }
 
     private void copy(TDL4.Copy_stmtContext ctx) {
@@ -536,6 +537,11 @@ public class TDL4Interpreter implements Iterable<TDL4.StatementContext> {
     }
 
     private void select(TDL4.Select_stmtContext ctx) {
+        String intoName = parseIdentifier(ctx.ds_name().L_IDENTIFIER().getText());
+        if (dataContext.has(intoName)) {
+            throw new InvalidConfigurationException("SELECT INTO \"" + intoName + "\" tries to create DataStream \"" + intoName + "\" which already exists");
+        }
+
         TDL4.From_scopeContext from = ctx.from_scope();
 
         boolean distinct = ctx.K_DISTINCT() != null;
@@ -626,8 +632,6 @@ public class TDL4Interpreter implements Iterable<TDL4.StatementContext> {
             String category = resolveType(whereCtx.type_alias());
             query = new QueryItem(expr, category);
         }
-
-        String intoName = parseIdentifier(ctx.ds_name().L_IDENTIFIER().getText());
 
         if (star && (union == null) && (join == null) && (query.expression == null)) {
             dataContext.put(intoName, new DataStream(firstStream.streamType, firstStream.get(), firstStream.accessor.attributes()));
@@ -800,8 +804,8 @@ public class TDL4Interpreter implements Iterable<TDL4.StatementContext> {
 
         Map<String, DataStream> result;
         try {
-            Operation op = opInfo.opClass.newInstance();
-            op.initialize(dataContext.getUtils(), inputMap, new ParamsContext(opInfo.meta.definitions, "Operation '" + opVerb + "'", params), outputMap);
+            Operation op = opInfo.configurable.getDeclaredConstructor().newInstance();
+            op.initialize(dataContext.getUtils(), inputMap, new Configuration(opInfo.meta.definitions, "Operation '" + opVerb + "'", params), outputMap);
             result = op.execute();
         } catch (Exception e) {
             throw new InvalidConfigurationException("CALL \"" + opVerb + "\" failed with an exception", e);
